# reclip

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  claude.md  project.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
Reclip/: Info.plist  PrivacyInfo.xcprivacy  Reclip-AppStore.entitlements  Reclip.entitlements  ReclipApp.swift
Reclip/Assets.xcassets/AccentColor.colorset/: Contents.json
ReclipKit/: Package.swift
ReclipKit/Sources/ReclipASR/: ASRProvider.swift  ModelDownloader.swift  WhisperKitProvider.swift
ReclipKit/Sources/ReclipCore/Audio/: AudioPlayer.swift  WaveformCache.swift  WaveformGenerator.swift
ReclipKit/Sources/ReclipCore/AudioEditor/: AudioEditor.swift
ReclipKit/Sources/ReclipCore/Exporters/: ReportExporter.swift
ReclipKit/Sources/ReclipCore/Models/: AnalysisModels.swift  EditModels.swift  Project.swift  Settings.swift  TranscriptModels.swift
ReclipKit/Sources/ReclipLLM/: ClaudeProvider.swift  LLMProvider.swift  OllamaProvider.swift
ReclipKit/Sources/ReclipUI/Components/: GlassComponents.swift  PlaybackControls.swift  SpeakerTimelineView.swift  TranscriptView.swift  WaveformEditor.swift  WaveformView.swift
ReclipKit/Sources/ReclipUI/ViewModels/: ContentViewModel.swift
ReclipKit/Sources/ReclipUI/Views/: AIConsentView.swift  AudioEditorView.swift  ContentView.swift  SettingsView.swift
ReclipKit/Tests/ReclipCoreTests/: ASRTests.swift  AudioEditorTests.swift  LargeFileTests.swift  ModelTests.swift  WhisperKitModelTests.swift
crates/reclip-asr/: Cargo.toml
crates/reclip-asr/src/: error.rs  languages.rs  lib.rs  provider.rs
crates/reclip-core/: Cargo.toml
crates/reclip-core/src/: audio.rs  editor.rs  exporter.rs  lib.rs  python.rs  types.rs
crates/reclip-diarization/: Cargo.toml
crates/reclip-diarization/src/: error.rs  lib.rs  merger.rs  provider.rs
crates/reclip-llm/: Cargo.toml
crates/reclip-llm/src/: claude.rs  error.rs  lib.rs  ollama.rs  prompts.rs  provider.rs
crates/reclip-models/: Cargo.toml
crates/reclip-models/src/: error.rs  lib.rs  manager.rs  registry.rs
crates/reclip-waveform/: Cargo.toml
crates/reclip-waveform/src/: error.rs  generator.rs  lib.rs
docs/: APP_STORE_COMPLIANCE.md  DESIGN_GUIDELINES.md  DEVELOPER_SETUP.md  SPEC.md  SWIFT_FEASIBILITY.md
fastlane/: Appfile  Fastfile  Matchfile
logo/: AppIcon.icns
logo/AppIcon.appiconset/: Contents.json
scripts/: ExportOptions-AppStore.plist  ExportOptions-DeveloperID.plist  ExportOptions-Development.plist  build-dmg.sh  notarize.sh  setup-signing.sh
src/: __init__.py  analyzer.py  cli.py  editor.py  exporter.py  main.rs  preprocessor.py  transcriber.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: asr.rs  audio.rs  diarization.rs  llm.rs  mod.rs  models.rs  waveform.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  App.vue  index.css
ui/src/components/: Header.tsx  PlaybackControls.tsx  Sidebar.tsx  TranscriptView.tsx  Waveform.tsx
ui/src/hooks/: useTauri.ts
ui/src/types/: index.ts
