[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/reclip-core",
    "crates/reclip-asr",
    "crates/reclip-diarization",
    "crates/reclip-models",
    "crates/reclip-waveform",
    "crates/reclip-llm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["reclip"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Tauri
tauri = { version = "2.1", features = [] }
tauri-build = "2.0"

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async trait helpers
trait-variant = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Force ort version to match pyannote-rs requirements
[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.10" }
ort-sys = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.10" }
