[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "reclip"
version = "0.1.0"
description = "Podcast 自動剪輯工具 - 使用 LLM 分析逐字稿，自動移除 filler words"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "reclip", email = "reclip@example.com" }]
keywords = ["podcast", "audio", "editing", "whisper", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]

dependencies = [
    "whisperx>=3.1.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
reclip = "src.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "reclip._core"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
