[package]
name = "reclip-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model download and cache management for reclip"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client for downloads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# File system
directories = "5.0"
walkdir = "2.4"

# Hash verification
sha2 = "0.10"
hex = "0.4"

# Progress indication
indicatif = "0.17"

# Async stream
tokio-util = { version = "0.7", features = ["io"] }
